scilab/modules/ast/tests/nonreg_tests/bug_9344.unix.dia.ref
// =============================================================================
// Scilab ( http://www.scilab.org/ ) - This file is part of Scilab
// Copyright (C) 2011 - DIGITEO - Bruno JOFRET
//
//  This file is distributed under the same license as the Scilab package.
// =============================================================================
//
// <-- Non-regression test for bug 9344 -->
//
// <-- Bugzilla URL -->
// http://bugzilla.scilab.org/show_bug.cgi?id=9344
//
// <-- Short Description -->
// Parser did not display anything when failing on UTF-8 char
// <-- CLI SHELL MODE -->
execstr("mclose(1");
at line     1 of executed string 
at line    31 of executed file   TMPDIR/bug_9344.tst
mclose(1
^
Error: syntax error, unexpected end of line, expecting "," or )
